[tool.poetry]
name = "todos"
version = "0.1.0"
description = ""
authors = ["Emmad-Ahmad-Usmani<em.madi.don@gmail.com>"]
readme = "README.md""

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
