[tool.poetry]
name = "aasgnmnt1"
version = "0.1.0"
description = "first assignment of quater 3"
authors = ["Emmad-Ahmad-Usmani<em.madi.don@gmail.com>"]
readme = "README.md""

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
